--- a/views/plain-text.html
+++ b/views/plain-text.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <textarea id="plain-textarea" 
-    placeholder="GSDM plain text" 
+    placeholder="Enter text here" 
     class="slds-textarea custom-textarea" 
-    rows="5">
-    </textarea>
+    rows="5"></textarea>
+
 </body>
 <script src="/blocksdk"></script>
 <script>
