--- a/views/plain-text.html
+++ b/views/plain-text.html
@@ -1,31 +1,54 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/design-system/2.15.3/styles/salesforce-lightning-design-system.min.css" />
+    <link rel="stylesheet" type="text/css" href="/slds/styles/salesforce-lightning-design-system.css" />
     <style>
-     
+        .grey-background{
+            background: #fafaf9;
+        }
     </style>
 </head>
-<body>
+<body class="grey-background">
+
     <div class="slds-grid slds-grid_vertical slds-p-around_small">
-        <div class="slds-col">
-            <input class="slds-input" id="selection-name" maxlength="50" type="text" value="Plain Text Block">
+        <div class="slds-col image-option-input">
+            <div class="slds-form-element">
+                <label class="slds-form-element__label" for="selectionName"><abbr class="slds-required" title="required">*</abbr>Selection Name</label>
+                <div class="slds-form-element__control"><input class="slds-input" id="selectionName" maxlength="50" required="" type="text"></div>
+            </div>
         </div>
         <div class="slds-col">
-            <textarea id="plain-textarea" 
-            placeholder="Enter plain text here" 
-            class="slds-textarea custom-textarea" 
-            rows="5"
-            maxlength="4000"></textarea>
+            <div class="slds-form-element"><label class="slds-form-element__label" for="description">Guidance Message</label>
+                <div class="slds-form-element__control"><textarea class="slds-textarea description-textarea" id="description" placeholder="Leave instructions here for your business users.">Set Guidance Msg.</textarea></div>
+            </div>
+        </div>
+        <div class="slds-col">
+            <div class="slds-form-element"><label class="slds-form-element__label" for="charLimit">Character Limit</label>
+                <div class="slds-form-element__control">
+                    <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_decrement" type="button">
+                        <svg aria-hidden="true" class="slds-button__icon">
+                            <use xlink:href="/slds/icons/utility-sprite/svg/symbols.svg#ban"></use>
+                        </svg>
+                    </button>
+                    <input class="slds-input slds-input_counter" id="charLimit" min="50" max="4000" step="50" type="number" value="4000">
+                    <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_increment" disabled="" type="button">
+                        <svg aria-hidden="true" class="slds-button__icon">
+                            <use xlink:href="/slds/icons/utility-sprite/svg/symbols.svg#new"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
-    
 
 </body>
-<script src="/blocksdk"></script>
+<script src="/blocksdk/blocksdk.js"></script>
 <script>
-    document.getElementById("selection-name").addEventListener("change", setSuperContent);
-    document.getElementById("plain-textarea").addEventListener("change", setContent);
     const regPattern = /(?<=\>)(.*)(?=\<\/)/;
+    const descriptionId = 'description';
+    const selectionNameId = 'selectionName';
+
+    document.getElementById(selectionNameId).addEventListener("change", setSuperContent);
+    document.getElementById(descriptionId).addEventListener("change", setContent);
 
     var sdk = new window.sfdc.BlockSDK({
         blockEditorWidth: 600,
@@ -38,27 +61,27 @@
             
             var plainTextArry = data.split(regPattern);
 
-            document.getElementById("plain-textarea").value = plainTextArry[1];
+            document.getElementById(descriptionId).value = plainTextArry[1];
         }
     });
     
 
     sdk.getData(function (data) { 
         console.log(data);
-        if (data) {
-            document.getElementById("selection-name").value = data["dmFreeTextBlock"]["selectionName"];
+        if (data && data["dmFreeTextBlock"]) {
+            document.getElementById(selectionNameId).value = data["dmFreeTextBlock"]["selectionName"];
         }
     });
 
 
     function setSuperContent(){
-        var selectionNameValue = document.getElementById("selection-name").value;
+        var selectionNameValue = document.getElementById(selectionNameId).value;
 		sdk.setSuperContent(selectionNameValue);
     }
 
     function setContent(){
-        var plainTextValue = document.getElementById("plain-textarea").value;
-        var selectionNameValue = document.getElementById("selection-name").value;
+        var plainTextValue = document.getElementById(descriptionId).value;
+        var selectionNameValue = document.getElementById(selectionNameId).value;
         var testBlock = {
             "dmFreeTextBlock":
             {
