--- a/views/plain-text.html
+++ b/views/plain-text.html
@@ -13,16 +13,22 @@
         <div class="slds-col image-option-input">
             <div class="slds-form-element">
                 <label class="slds-form-element__label" for="selectionName"><abbr class="slds-required" title="required">*</abbr>Selection Name</label>
-                <div class="slds-form-element__control"><input class="slds-input" id="selectionName" maxlength="50" required="" type="text"></div>
+                <div class="slds-form-element__control">
+                    <input class="slds-input" id="selectionName" maxlength="50" required="" type="text">
+                </div>
             </div>
         </div>
         <div class="slds-col">
-            <div class="slds-form-element"><label class="slds-form-element__label" for="description">Guidance Message</label>
-                <div class="slds-form-element__control"><textarea class="slds-textarea description-textarea" id="description" placeholder="Leave instructions here for your business users.">Set Guidance Msg.</textarea></div>
+            <div class="slds-form-element">
+                <label class="slds-form-element__label" for="description">Guidance Message</label>
+                <div class="slds-form-element__control">
+                    <textarea class="slds-textarea description-textarea" id="description" placeholder="Leave instructions here for your business users.">Set Guidance Msg.</textarea>
+                </div>
             </div>
         </div>
         <div class="slds-col">
-            <div class="slds-form-element"><label class="slds-form-element__label" for="charLimit">Character Limit</label>
+            <div class="slds-form-element">
+                <label class="slds-form-element__label" for="charLimit">Character Limit</label>
                 <div class="slds-form-element__control">
                     <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_decrement" type="button">
                         <svg aria-hidden="true" class="slds-button__icon">
@@ -57,19 +63,22 @@
         blockEditorWidth: 600,
         tabs: ['htmlblock', 'stylingblock']
     });
-    
+    /*
     sdk.getContent(function (data) {
         console.log(data);
         if (data) {
             document.getElementById(descriptionId).value = data;
         }
     });
+    */
     
 
     sdk.getData(function (data) { 
         console.log(data);
         if (data && data['dmFreeTextBlock']) {
             document.getElementById(selectionNameId).value = data['dmFreeTextBlock']['selectionName'];
+            document.getElementById(descriptionId).value = data['dmFreeTextBlock']['description'];
+            document.getElementById(charLimitId).value = data['dmFreeTextBlock']['charLimit'];          
         }
     });
 
@@ -81,7 +90,7 @@
     */
 
     function setContent(){
-        const plainTextValue = document.getElementById(descriptionId).value;
+        const descriptionValue = document.getElementById(descriptionId).value;
         const selectionNameValue = document.getElementById(selectionNameId).value;
         const charLimitValue = document.getElementById(charLimitId).value;
         const dmTextBlock = {
@@ -90,12 +99,12 @@
                 dmBlockId: blockId,
                 version: 1,
                 selectionName: selectionNameValue,
-                description: plainTextValue,
+                description: descriptionValue,
                 charLimit: charLimitValue
             }
         };
         sdk.setSuperContent(selectionNameValue);
-        sdk.setContent(plainTextValue);
+        sdk.setContent(`<div data-dm-block-id="`+blockId+`" class="dm-free-text-block"></div>`);
         sdk.setData(dmTextBlock);
     }
 
